--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/koka831/codeprep_generator.git"
+  },
   "author": "koka <koka.code@gmail.com>",
   "license": "ISC",
   "dependencies": {
