--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "config": "^1.26.1",
-    "shelljs": "^0.7.8"
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
+    "readline": "^1.3.0",
+    "shelljs": "^0.7.8",
+    "util": "^0.10.3"
   }
 }
